[package]
name = "l18446744073709551615"
version = "18446744073709551615.18446744073709551615.18446744073709551615"
edition = "2021"
authors = ["Anna <bagels.colas_0h@icloud.com>"]
description = "ඞ"
readme = "readme.md"
homepage = "https://github.com/pozm/_18446744073709551615"
repository = "https://github.com/pozm/_18446744073709551615"
keywords = ["ඞ"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
